# routes/movies.js
@@ -1,9 +1,17 @@
 const express = require('express');
 const router = express.Router();
-const { getAllMovies, getMovieById, createMovie } = require('../controllers/moviesController');
+const { 
+  getAllMovies, 
+  getMovieById, 
+  createMovie,
+  updateMovie,
+  deleteMovie
+ } = require('../controllers/moviesController');
 
 router.get('/', getAllMovies);
 router.get('/:id', getMovieById);
 router.post('/', createMovie);
+router.put('/:id', updateMovie);
+router.delete('/:id', deleteMovie);
 
 module.exports = router;
